[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Axum Full Course code."
homepage = "https://youtu.be/XZtlD_m59sM"
repository = "https://github.com/rust-httpc-test"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.16"


[dev-dependencies]
anyhow = "1"
